force-app/main/default/objects/Blood_Coordination__c/fields/Attender_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attender_Contact__c</fullName>
    <formula>Patient__r.Attender_contact_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attender Contact</label>
    <type>Text</type>
</CustomField>