force-app/main/default/objects/Blood_Coordination__c/fields/Donor_Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Donor_Blood_Group__c</fullName>
    <formula>TEXT(Donor__r.Blood_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Blood Group</label>
    <type>Text</type>
</CustomField>