force-app/main/default/objects/Blood_Coordination__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Blood_Request__c</referenceTo>
    <relationshipLabel>Blood Coordinations</relationshipLabel>
    <relationshipName>Blood_Coordinations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>